# starter

./: .cursorrules  .env.example  .gitignore  .gitleaks.toml  .neorules  .pre-commit-config.yaml  .secrets.baseline  .snyk  AGENTS.md  API_CONSISTENCY_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPONENT_API_MIGRATION_GUIDE.md  COMPONENT_DUPLICATION_ANALYSIS.md  COMPREHENSIVE_TECHNICAL_DEBT_ANALYSIS.md  CONTRIBUTING  DEVELOPER_ONBOARDING_STRATEGY.md  DOCUMENTATION_AUDIT.md  EMAIL_SYSTEM_TESTING_SUMMARY.md  EPIC_IMPLEMENTATION_PLANS.md  GEMINI.md  INFORMATION_ARCHITECTURE.md  LICENSE  Makefile  Makefile.automation  NAVIGATION_INDEX.json  NAVIGATION_INDEX.md  NEOFORGE_CONSOLIDATION_ROADMAP.md  NEOFORGE_DOCUMENTATION_CONSOLIDATION_REPORT.md  NEOFORGE_INVENTORY_ANALYSIS.json  PERSONALIZATION_SYSTEM_IMPLEMENTATION.md  PHASE_2_ADOPTION_STRATEGY.md  PHASE_2_IMPLEMENTATION_TIMELINE.md  README.md  STRATEGIC_ROADMAP.md  TECHNICAL_DEBT_BACKLOG.md  TECHNICAL_DEBT_RESOLUTION_REPORT.md  TECHNICAL_DEBT_STRATEGIC_PLAN.md  TEST_INFRASTRUCTURE_STABILITY_ANALYSIS_REPORT.md  (+14 more)
backend/: .env.example  .env.test  Dockerfile  Makefile  README.md  TESTING.md  alembic.ini  docker-compose.dev.yml  metrics_updated.py  pyproject.toml  pytest-standalone.ini  pytest.ini  requirements.test.txt  requirements.txt  run_metrics_test.py  standalone_test_auth.py  standalone_test_middleware.py  standalone_test_security.py  test_billing_approach.py  test_billing_implementation.py  test_circuit_breaker.py  test_jwt_security.py  test_rate_limiting.py  test_security_headers.py  test_security_integration.py  test_stripe_integration.py  validation_results.json
backend/alembic/: env.py
backend/alembic/versions/: 20250216_1538_10dde5a7dde1_initial.py  20250302_1317_c9b3dee5ebce_create_tables.py  20250302_1353_5f00d7881d03_create_tables_with_models.py  20250809_2022_abcd1234_add_password_reset_token_table.py  20250809_2030_email_verification_fields.py  20250812_1548_add_project_support_community_idempotency.py  20250814_1045_add_cursor_pagination_indices.py  20250814_1200_add_event_tracking_table.py  20250814_1300_add_ab_testing_tables.py  20250814_1400_add_recommendation_system_tables.py  20250814_1500_add_personalization_tables.py  20250814_2120_add_content_suggestions_system.py  20250815_1600_add_multi_tenant_architecture.py
backend/app/: __init__.py  main.py
backend/app/ai_workflow/: __init__.py  execution_engine.py  messaging.py  metrics.py  quality_gates.py  state_manager.py
backend/app/api/: deps.py  health.py  middleware.py
backend/app/core/: audit_logging.py  auth.py  cache.py  caching.py  celery.py  circuit_breaker.py  config.py  database.py  email.py  email_templates.py  input_validation.py  jwt_security.py  logging.py  metrics.py  middleware.py  ml.py  password_policy.py  performance.py  queue.py  rate_limiting.py  redis.py  retry_logic.py  security.py  security_audit.py  security_headers.py  tenant.py  tracing.py
backend/app/crud/: __init__.py  ab_test.py  admin.py  ai_workflow.py  audit_log.py  base.py  community_post.py  content_suggestion.py  email_tracking.py  event.py  item.py  password_reset_token.py  personalization.py  project.py  recommendation.py  status_event.py  support_ticket.py  tenant_crud.py  user.py  user_session.py
backend/app/db/: base.py  base_class.py  init_db.py  metrics.py  query_monitor.py  session.py  types.py
backend/app/email_templates/: admin_alert.html  base.html  new_account.html  reset_password.html  test_email.html
backend/app/migrations/: env.py
backend/app/ml/: recommendations.py
backend/app/models/: __init__.py  ab_test.py  admin.py  ai_workflow.py  audit_log.py  community_post.py  content_suggestion.py  email_tracking.py  event.py  funnel.py  idempotency_key.py  item.py  password_reset_token.py  personalization.py  project.py  rbac.py  recommendation.py  status_event.py  subscription.py  support_ticket.py  tenant.py  user.py  user_session.py
backend/app/personalization/: __init__.py  cache_manager.py  engine.py  ml_models.py  rule_evaluator.py  user_profiler.py
backend/app/schemas/: __init__.py  ab_test.py  admin.py  ai_workflow.py  auth.py  common.py  community_post.py  content_suggestion.py  email_tracking.py  event.py  item.py  personalization.py  project.py  recommendation.py  status_event.py  subscription.py  support_ticket.py  tenant.py  token.py  user.py  webhooks.py
backend/app/services/: ai_content_analyzer.py  billing_service.py  recommendation_cache.py  recommendation_integration.py  stripe_service.py  subscription_service.py
backend/app/utils/: audit.py  cursor_pagination.py  datetime.py  db_optimization.py  http_cache.py  idempotency.py  memory_optimization.py  pagination_metrics.py
backend/app/worker/: README.md  email_worker.py  event_worker.py  recommendation_worker.py  run_worker.py
backend/docker/postgres/: Dockerfile  init-test-db.sh
backend/requirements/: dev.txt
backend/scripts/: create_test_db.py  fix_postgres_collation.sh  init_test_env.sh  migrate.sh  run_db_tests.sh  run_tests.sh  run_tests_fixed.sh  test-fast.sh  validate_email_system.py  validate_pagination_performance.py  wait-for-db.sh
backend/src/routes/: docs.py
backend/tests/: README.md  TESTING.md  conftest.py  conftest_simple.py  factories.py  init_test_db.py  session_context.py  test_admin_endpoints.py  test_config_simple.py  test_cursor_pagination.py  test_datetime_simple.py  test_factories.py  test_health.py  test_metrics_simple.py  test_metrics_standalone.py  test_observability_epic1.py  test_security_simple.py  test_simple.py
backend/tests/api/: test_admin.py  test_admin_router.py  test_auth.py  test_auth_rate_limit.py  test_auth_sessions.py  test_celery_health.py  test_community_epic1.py  test_content_suggestions.py  test_deps.py  test_email_verification.py  test_enhanced_security_middleware.py  test_events.py  test_examples.py  test_http_metrics_middleware.py  test_idempotency_ttl.py  (+25 more)
backend/unit_tests/: test_pure_functions.py
(+1224 files in other folders)
