[project]
name = "neoforge"
version = "0.1.0"
description = "A modern, cost-efficient starter kit for bootstrapped founders"
authors = [
    { name = "NeoForge Team", email = "team@neoforge.dev" }
]
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "mlflow>=2.10.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "emails>=0.6",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "factory-boy>=3.3.0",
    "alembic>=1.13.1",
    "email-validator>=2.1.0.post1",
    "psycopg2-binary>=2.9.9",
    "fastapi-mail>=1.4.1",
    "celery>=5.3.6",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.1",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html --no-cov-on-fail"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "app/migrations/*",
    "app/db/base.py",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "raise ImportError",
]
fail_under = 80
show_missing = true

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mlflow.*"]
ignore_missing_imports = true

[tool.poetry.dependencies]
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9" 